@@ -18,6 +18,7 @@ Version 0.4c
  - FocusStrike replaced
  - Backstab replaced
  - Ensnare replaced
+ - CrushingStrike replaced
 
 --------------------------------------------
              PREVIOUS VERSIONS
